[package]
name = "terror"
description = "Uniform REST error response body, tailored for JSON"
version = "1.1.4"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
keywords = ["rest", "error", "json"]
readme = "README.md"
homepage = "https://github.com/artkonr/terror"

exclude = ["/ci", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", optional = true, features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"], optional = true }
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"

[dev-dependencies]
anyhow = "1.0.75"


[features]
time = ["dep:chrono"]
err_id = ["dep:uuid"]
mdn = []