[package]
name = "terror"
description = "Uniform REST error response body, tailored for JSON"
version = "3.0.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
keywords = ["rest", "error", "json"]
readme = "README.md"
homepage = "https://github.com/artkonr/terror"

exclude = ["/ci", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", optional = true, features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"], optional = true }
serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"

[dev-dependencies]
anyhow = "1.0.80"


[features]
time = ["dep:chrono"]
err_id = ["dep:uuid"]
mdn = []
