[package]
name = "terror"
description = "Uniform REST error response body, tailored for JSON"
version = "3.0.2"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
keywords = ["rest", "error", "json"]
readme = "README.md"
repository = "https://github.com/artkonr/terror"

exclude = ["/ci", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", optional = true, features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"], optional = true }
serde = "1.0.219"
serde_json = "1.0.143"
serde_derive = "1.0.219"
httpstatus = { version = "0.1.2", optional = true }

[dev-dependencies]
anyhow = "1.0.99"


[features]
time = ["dep:chrono"]
err_id = ["dep:uuid"]
mdn = []
infer_http = ["dep:httpstatus"]
